--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="id">
-
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device width, initial-scale=1.0" />
@@ -13,6 +12,8 @@
         />
         <!-- JS Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     </head>
 
     <body>
@@ -25,7 +26,7 @@
                     <img src="images/logo.jpg" alt="Logo Batik Nusantara" class="logo-navbar me-2">
                     <span>   UMKM Batik Nusantara</span>
                     <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
+                        <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto d-flex gap-3">
@@ -81,6 +82,23 @@
         <footer>
             <p>&copy; 2025 Batik Nusantara. Semua hak dilindungi.</p>
         </footer>
+        <!-- jQuery Event (NAV BAR) -->
+        <script>
+            $(".navbar-nav .nav-link").hover(
+                function () {
+                $(this).css({
+                    "border-bottom": "2px solid #ffd27f",
+                    "padding-bottom": "4px"
+                });
+                },
+                function () {
+                $(this).css({
+                    "border-bottom": "none",
+                    "padding-bottom": "0"
+                });
+                }
+            );
+        </script>
         <script src="script.js"></script>
         
     </body>
